<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/smartfarmone"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="Login"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!--email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_custom"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="6dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_custom"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="6dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/registration_button"
        android:text="@string/login"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/regLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="Dont have an account register? Click here" />

   </LinearLayout>