<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activities.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/smartfarmone"
            tools:ignore="ContentDescription" />
        <!--radio group for user types-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_user_type"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_userType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_farmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/farmer" />

            <RadioButton
                android:id="@+id/radio_buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/buyer" />

            <RadioButton
                android:id="@+id/radio_imp_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="Implement Dealer" />
        </RadioGroup>

        <!--lastname-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textSurname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textCapWords"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--firstname-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFirstname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textCapWords"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- phone Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="number"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- state Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/et_custom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="State"
                    android:textColor="#f76a8c"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/stateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="4dp"
                    android:padding="6dp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/registration_button"
            android:text="@string/sign_up" />

        <!--login link-->
        <TextView
            android:id="@+id/link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>