<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activities.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/enter_product"
            android:textSize="22sp" />


        <!--Name of Product-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textProductName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Product Name"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textCapWords"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Quantity-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_quantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Quantity"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_quantity"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="number"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Category-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/text_category"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Category"-->
<!--            android:padding="4dp"-->
<!--            app:errorEnabled="true">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edit_category"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="70dp"-->
<!--                android:inputType="text"-->
<!--                android:padding="4dp"-->
<!--                android:textSize="15sp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <!--category-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_custom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="4dp"
                    android:text="Product Category"
                    android:textColor="#f76a8c"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/productCategorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp" />
            </LinearLayout>
        </LinearLayout>

        <!--Price-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Price in Naira"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_price"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="number"
                android:padding="4dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_custom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="4dp"
                    android:text="@string/state"
                    android:textColor="#f76a8c"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/stateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="textCapWords"
                    android:padding="4dp"
                    android:text="@string/lga"
                    android:textColor="#f76a8c"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextViewEdits" />

                <Spinner
                    android:id="@+id/lgaSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>

        <!--Quantity-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:padding="4dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_location"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textCapWords"
                android:padding="4dp"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register_product"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/registration_button"
            android:text="@string/add_product"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>